# foaks3

./: Cargo.toml  rust-toolchain
infrastructure/: Cargo.toml
infrastructure/src/: constants.rs  lib.rs  merkle_tree.rs  my_hash.rs  rs_polynomial.rs  utility.rs
intrinsics/: Cargo.toml
intrinsics/src/: lib.rs
linear_code/: Cargo.toml
linear_code/src/: expanders.rs  lib.rs  linear_code_encode.rs
linear_gkr/: Cargo.toml
linear_gkr/src/: lib.rs  log_fftgkr.txt  main.rs  mat_16_circuit.txt  mat_16_meta.txt
linear_gkr/src/circuit_fast_track/: mod.rs
linear_gkr/src/config/: mod.rs
linear_gkr/src/polynomial/: mod.rs
linear_gkr/src/prover/: mod.rs
linear_gkr/src/verifier/: mod.rs
poly_commitment/: Cargo.toml
poly_commitment/src/: lib.rs
prime_field/: Cargo.toml
prime_field/src/: error.rs  lib.rs  ops.rs
vpd/: Cargo.toml
vpd/src/: fri.rs  lib.rs  prover.rs  verifier.rs
