[package]
name = "linear_gkr"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bincode = "1.3.3"
ethnum = "1.2.2"
infrastructure = { path = "../infrastructure" }
prime_field = { path = "../prime_field" }
poly_commitment = { path = "../poly_commitment" }
vpd = { path = "../vpd" }